# Ember

./: .gitignore  .gitmodules  README.md
encosure/: Bottom_lid.stl  Bottom_lid_no_ears.stl  Frontpanel.stl  Frontpanel_no_ears.stl  battery_holder.stl  button.stl  button_round.ipt  button_round.stl  display_holder.stl  encoder_knob_custom.stl  power_button.stl
encosure/accessories/: Cover.stl  Cover_rev7_8_9.stl
encosure/inventor/rev4/: Battery.ipt  Bottom_lid.ipt  Bottom_lid.stl  Display.ipt  Encoder knob.ipt  Frontpanel.ipt  Frontpanel.stl  LOGO.ipt  ON_Off_switch.ipt  ON_Off_switch.stl  Stand.ipt  battery_holder.ipt  battery_holder.stl  button.ipt  button.stl  display_holder.ipt  display_holder.stl  encoder_knob_custom.stl  lab powersupply.iam  m1_4_10mm_screw.ipt  m1_4_6mm_screw.ipt  power_button.ipt  power_button.stl  spacer.ipt
pcb/: 12-13.rar  partsbox_bom-Powersupply.csv
pcb/Bom/: bom_rev_10.csv  bom_rev_11.csv  bom_rev_13.csv  bom_rev_8.csv  bom_rev_9.csv
pcb/Gerber files/: rev_10.rar  rev_11.rar  rev_12.rar  rev_13.rar  rev_8.rar  rev_9.rar
pcb/altium/Powersupply/: ActiveBom.BomDoc  Assembly.OutJob  BOM.OutJob  Booster.SchDoc  Controll.SchDoc  Display.SchDoc  Driver.SchDoc  Fabrication.OutJob  Job1.OutJob  LDO.SchDoc  Min_load_constan_current.SchDoc  PCBWAYS.OutJob  Powersupply.Annotation  Powersupply.OutJob  (+26 more)
pcb/ltspice/: Draft1.asc  booster.asc  booster.net
powersupply_firmware/Pico/: CMakeLists.txt  Display.cpp  Display.h  Flash.h  color.h  logo.h  main.cpp  test.pio
powersupply_firmware/Pico/flash_data/: batteryChargingSymbol.h  batteryDownArrow.h  batterySymbol.h  batterySymbolEmpty.cpp  batterySymbolEmpty.h  batterySymbolHigh.cpp  batterySymbolHigh.h  batterySymbolLow.cpp  batterySymbolLow.h  batterySymbolMedHigh.cpp  batterySymbolMedHigh.h  batterySymbolMedLow.cpp  batterySymbolMedLow.h  batterySymbol_bar.h  batteryUpArrow.h  bigFont.cpp  bigFont.h  bootscreen.cpp  bootscreen.h  chargingSymbol.cpp  chargingSymbol.h  logo.cpp  logo.h  logo_symbol.h  logo_text.h  outputOffSymbol.cpp  outputOffSymbol.h  outputOnSymbol.cpp  outputOnSymbol.h  overheatSymbol.h  selectedMarker.cpp  selectedMarker.h  smallFont.cpp  smallFont.h  smallFontRed.h  timeFont.h
powersupply_firmware/Pico/include/: Analog.h  Battery.h  Booster.h  ComandlineInterface.h  CommandlineInterface.h  Display.h  Flash.h  Font.h  FreeRTOSConfig.h  GUI.h  Hartbeat.h  Heartbeat.h  Knobs.h  LinReg.h  Onoff.h  Overheat.h  PSU.h  Pcb.h  Powersaver.h  SmallBoosters.h  Sprite.h  color.h
powersupply_firmware/Pico/src/: Analog.cpp  Battery.cpp  Booster.cpp  ComandLineInterface.cpp  CommandLineInterface.cpp  Display.cpp  Flash.cpp  Font.cpp  GUI.cpp  Hartbeat.cpp  Heartbeat.cpp  Knobs.cpp  LinReg.cpp  Onoff.cpp  Overheat.cpp  PSU.cpp  Powersaver.cpp  SmallBoosters.cpp  Sprite.cpp  color.c  main.cpp
powersupply_firmware/firmware_compiled/: BlueSmoke_rev12.uf2  Bluesmoke_rev7.uf2  bluesmoke_rev10.uf2  bluesmoke_rev11.uf2  bluesmoke_rev8.uf2  bluesmoke_rev9.uf2
powersupply_firmware/hex_files/: rev_4.hex
powersupply_firmware/powersupply_firmware.cydsn/: ArialNumFontPlus.c  ArialNumFontPlus.h  BigFont.c  BigFont.h  GUI.c  GUI.h  Grotesk16x32.c  Grotesk16x32.h  Grotesk32x64.c  Grotesk32x64.h  analog.c  analog.h  battery.c  battery.h  booster.c  booster.h  buck.c  buck.h  color.c  color.h  display.c  display.h  eeprom.h  knobs.c  knobs.h  led.c  led.h  linReg.c  linReg.h  main.c  my_eeprom.c  my_uart.c  powersupply_firmware.cyprj  psu.c  psu.h  statemachine.c  statemachine.h  uart.h
testing/Powersupply_automatic_tests/: Powersupply_automatic_tests.sln
(+64 files in other folders)
